Fix aligned images margins

--- a/sass/media/_captions.scss
+++ b/sass/media/_captions.scss
@@ -17,13 +17,6 @@
 	&.alignright {
 		display: block;
 		margin-bottom: 1em;
-
-		.widget &,
-		.blog &,
-		.archive &,
-		.search & {
-			margin: 0;
-		}
 	}
 
 	&.aligncenter {
